Integrated Sinatra as DSL for custom routes

--- a/src/IronSharePoint/IronSharePoint.csproj
+++ b/src/IronSharePoint/IronSharePoint.csproj
@@ -238,28 +238,25 @@
     </None>
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint.rb" />
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\application.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\assets.rb" />
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\console\utils.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\ext\all.rb" />
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\ext\kernel.rb" />
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\ext\log4r.rb" />
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\ext\log4r\outputter\iron_logs_outputter.rb" />
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\ext\log4r\outputter\iron_memory_outputter.rb" />
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\ext\rack.rb" />
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\ext\rack\handlers\iron_sp.rb" />
-    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\file_stat.rb" />
-    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\hives\directory_hive.rb" />
-    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\hives\hive_composite.rb" />
-    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\hives\sp_document_hive.rb" />
-    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\hives\system_hive.rb" />
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\iron_composite_control.rb" />
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\iron_control.rb" />
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\iron_view.rb" />
-    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\json\parser.rb" />
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\mixins\control_view.rb" />
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\mixins\logging.rb" />
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\mixins\parent_attributes.rb" />
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\mixins\short_term_memory.rb" />
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\mixins\sp_context_accessors.rb" />
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\mixins\view_helpers.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\patches\core.rb" />
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\patches\core\json.rb" />
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\patches\core\object.rb" />
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\patches\core\regexp.rb" />
@@ -267,9 +264,13 @@
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\patches\digest\md5.rb" />
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\patches\hike\index.rb" />
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\patches\log4r\logger.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\patches\sprockets.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\patches\sprockets\processed_asset.rb" />
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\patches\system\date_time.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\patches\system\string.rb" />
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\rescues\template_error.haml" />
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\rescues\template_not_found.haml" />
+    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\routes.rb" />
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\variation.rb" />
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\version.rb" />
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\view_helpers\date_helper.rb" />
