--- a/src/IronSharePoint.IronRuby/IronSharePoint.IronRuby.csproj
+++ b/src/IronSharePoint.IronRuby/IronSharePoint.IronRuby.csproj
@@ -75,7 +75,9 @@
     <None Include="TEMPLATE\Features\IronSP_Gems\cache\log4r-1.1.10.gem" />
     <None Include="TEMPLATE\Features\IronSP_Gems\cache\multi_json-1.7.2.gem" />
     <None Include="TEMPLATE\Features\IronSP_Gems\cache\rack-1.5.2.gem" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\cache\rack-protection-1.5.0.gem" />
     <None Include="TEMPLATE\Features\IronSP_Gems\cache\sass-3.2.7.gem" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\cache\sinatra-1.4.2.gem" />
     <None Include="TEMPLATE\Features\IronSP_Gems\cache\slim-1.3.6.gem" />
     <None Include="TEMPLATE\Features\IronSP_Gems\cache\sprockets-2.9.0.gem" />
     <None Include="TEMPLATE\Features\IronSP_Gems\cache\temple-0.6.2.gem" />
@@ -551,6 +553,24 @@
     <None Include="TEMPLATE\Features\IronSP_Gems\gems\rack-1.5.2\lib\rack\utils.rb" />
     <None Include="TEMPLATE\Features\IronSP_Gems\gems\rack-1.5.2\lib\rack\utils\okjson.rb" />
     <None Include="TEMPLATE\Features\IronSP_Gems\gems\rack-1.5.2\SPEC" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\gems\rack-protection-1.5.0\lib\rack-protection.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\gems\rack-protection-1.5.0\lib\rack\protection.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\gems\rack-protection-1.5.0\lib\rack\protection\authenticity_token.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\gems\rack-protection-1.5.0\lib\rack\protection\base.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\gems\rack-protection-1.5.0\lib\rack\protection\escaped_params.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\gems\rack-protection-1.5.0\lib\rack\protection\form_token.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\gems\rack-protection-1.5.0\lib\rack\protection\frame_options.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\gems\rack-protection-1.5.0\lib\rack\protection\http_origin.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\gems\rack-protection-1.5.0\lib\rack\protection\ip_spoofing.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\gems\rack-protection-1.5.0\lib\rack\protection\json_csrf.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\gems\rack-protection-1.5.0\lib\rack\protection\path_traversal.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\gems\rack-protection-1.5.0\lib\rack\protection\remote_referrer.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\gems\rack-protection-1.5.0\lib\rack\protection\remote_token.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\gems\rack-protection-1.5.0\lib\rack\protection\session_hijacking.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\gems\rack-protection-1.5.0\lib\rack\protection\version.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\gems\rack-protection-1.5.0\lib\rack\protection\xss_header.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\gems\rack-protection-1.5.0\License" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\gems\rack-protection-1.5.0\README.md" />
     <None Include="TEMPLATE\Features\IronSP_Gems\gems\sass-3.2.7\init.rb" />
     <None Include="TEMPLATE\Features\IronSP_Gems\gems\sass-3.2.7\lib\sass.rb" />
     <None Include="TEMPLATE\Features\IronSP_Gems\gems\sass-3.2.7\lib\sass\cache_stores.rb" />
@@ -663,6 +683,13 @@
     <None Include="TEMPLATE\Features\IronSP_Gems\gems\sass-3.2.7\VERSION" />
     <None Include="TEMPLATE\Features\IronSP_Gems\gems\sass-3.2.7\VERSION_DATE" />
     <None Include="TEMPLATE\Features\IronSP_Gems\gems\sass-3.2.7\VERSION_NAME" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\gems\sinatra-1.4.2\AUTHORS" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\gems\sinatra-1.4.2\lib\sinatra.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\gems\sinatra-1.4.2\lib\sinatra\base.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\gems\sinatra-1.4.2\lib\sinatra\main.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\gems\sinatra-1.4.2\lib\sinatra\showexceptions.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\gems\sinatra-1.4.2\lib\sinatra\version.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\gems\sinatra-1.4.2\LICENSE" />
     <None Include="TEMPLATE\Features\IronSP_Gems\gems\slim-1.3.6\lib\slim.rb" />
     <None Include="TEMPLATE\Features\IronSP_Gems\gems\slim-1.3.6\lib\slim\code_attributes.rb" />
     <None Include="TEMPLATE\Features\IronSP_Gems\gems\slim-1.3.6\lib\slim\command.rb" />
@@ -792,7 +819,9 @@
     <None Include="TEMPLATE\Features\IronSP_Gems\specifications\log4r-1.1.10.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_Gems\specifications\multi_json-1.7.2.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_Gems\specifications\rack-1.5.2.gemspec" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\specifications\rack-protection-1.5.0.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_Gems\specifications\sass-3.2.7.gemspec" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\specifications\sinatra-1.4.2.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_Gems\specifications\slim-1.3.6.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_Gems\specifications\sprockets-2.9.0.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_Gems\specifications\temple-0.6.2.gemspec" />
@@ -1449,6 +1478,8 @@
     <Content Include="TEMPLATE\Features\IronSP_Gems\gems\rack-1.5.2\contrib\rack.svg" />
     <Content Include="TEMPLATE\Features\IronSP_Gems\gems\rack-1.5.2\contrib\rack_logo.svg" />
     <Content Include="TEMPLATE\Features\IronSP_Gems\gems\rack-1.5.2\contrib\rdoc.css" />
+    <Content Include="TEMPLATE\Features\IronSP_Gems\gems\sinatra-1.4.2\lib\sinatra\images\404.png" />
+    <Content Include="TEMPLATE\Features\IronSP_Gems\gems\sinatra-1.4.2\lib\sinatra\images\500.png" />
     <Content Include="TEMPLATE\Features\IronSP_IronRuby\ruby\1.9.1\rdoc\generator\template\darkfish\images\brick.png" />
     <Content Include="TEMPLATE\Features\IronSP_IronRuby\ruby\1.9.1\rdoc\generator\template\darkfish\images\brick_link.png" />
     <Content Include="TEMPLATE\Features\IronSP_IronRuby\ruby\1.9.1\rdoc\generator\template\darkfish\images\bug.png" />
