--- a/src/IronSharePoint/IronSharePoint.csproj
+++ b/src/IronSharePoint/IronSharePoint.csproj
@@ -276,13 +276,9 @@
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\routes.rb" />
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\variation.rb" />
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\version.rb" />
-    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\view_helpers\date_helper.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\view_helpers\capture_helper.rb" />
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\view_helpers\debug_helper.rb" />
-    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\view_helpers\number_helper.rb" />
-    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\view_helpers\raw_output_helper.rb" />
-    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\view_helpers\sanitize_helper.rb" />
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\view_helpers\tag_helper.rb" />
-    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\view_helpers\text_helper.rb" />
     <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\view_helpers\translation_helper.rb" />
     <None Include="TEMPLATE\SharePointProjectItem.spdata">
       <SharePointProjectItemId>{c49100b2-651a-4d69-8bbe-bc1ad369b13a}</SharePointProjectItemId>
