--- a/src/IronSharePoint.IronRuby/IronSharePoint.IronRuby.csproj
+++ b/src/IronSharePoint.IronRuby/IronSharePoint.IronRuby.csproj
@@ -65,6 +65,7 @@
       <DependentUpon>Package.package</DependentUpon>
     </None>
     <None Include="TEMPLATE\Features\IronSP_Gems\cache\activesupport-3.2.13.gem" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\cache\builder-3.2.0.gem" />
     <None Include="TEMPLATE\Features\IronSP_Gems\cache\coffee-script-2.2.0.gem" />
     <None Include="TEMPLATE\Features\IronSP_Gems\cache\coffee-script-source-1.6.2.gem" />
     <None Include="TEMPLATE\Features\IronSP_Gems\cache\execjs-1.4.0.gem" />
@@ -293,6 +294,14 @@
     <None Include="TEMPLATE\Features\IronSP_Gems\gems\activesupport-3.2.13\lib\active_support\xml_mini\nokogirisax.rb" />
     <None Include="TEMPLATE\Features\IronSP_Gems\gems\activesupport-3.2.13\lib\active_support\xml_mini\rexml.rb" />
     <None Include="TEMPLATE\Features\IronSP_Gems\gems\activesupport-3.2.13\MIT-LICENSE" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\gems\builder-3.2.0\lib\blankslate.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\gems\builder-3.2.0\lib\builder.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\gems\builder-3.2.0\lib\builder\blankslate.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\gems\builder-3.2.0\lib\builder\version.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\gems\builder-3.2.0\lib\builder\xchar.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\gems\builder-3.2.0\lib\builder\xmlbase.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\gems\builder-3.2.0\lib\builder\xmlevents.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\gems\builder-3.2.0\lib\builder\xmlmarkup.rb" />
     <None Include="TEMPLATE\Features\IronSP_Gems\gems\coffee-script-2.2.0\lib\coffee-script.rb" />
     <None Include="TEMPLATE\Features\IronSP_Gems\gems\coffee-script-2.2.0\lib\coffee_script.rb" />
     <None Include="TEMPLATE\Features\IronSP_Gems\gems\coffee-script-2.2.0\LICENSE" />
@@ -809,6 +818,7 @@
     <None Include="TEMPLATE\Features\IronSP_Gems\gems\tilt-1.3.6\lib\tilt\wiki.rb" />
     <None Include="TEMPLATE\Features\IronSP_Gems\gems\tilt-1.3.6\lib\tilt\yajl.rb" />
     <None Include="TEMPLATE\Features\IronSP_Gems\specifications\activesupport-3.2.13.gemspec" />
+    <None Include="TEMPLATE\Features\IronSP_Gems\specifications\builder-3.2.0.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_Gems\specifications\coffee-script-2.2.0.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_Gems\specifications\coffee-script-source-1.6.2.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_Gems\specifications\execjs-1.4.0.gemspec" />
